--- a/index.html
+++ b/index.html
@@ -16,36 +16,36 @@
 
 	<!--Audio Files-->
 		<!--sounds/-->
-		<audio src="sounds/splode.mp3" name="splode"></audio>
+		<audio src="./sounds/splode.mp3" name="splode"></audio>
 
 	<!--JavaScript Files-->
 
 		<!--js/data/-->
-		<script type="text/javascript" src="js/data/player.js"></script>
-		<script type="text/javascript" src="js/data/cave.js"></script>
+		<script type="text/javascript" src="./js/data/player.js"></script>
+		<script type="text/javascript" src="./js/data/cave.js"></script>
 
 		<!--js/classes/-->
-		<script type="text/javascript" src="js/classes/SoundManager.js"></script>
-		<script type="text/javascript" src="js/classes/GameObject.js"></script>
+		<script type="text/javascript" src="./js/classes/SoundManager.js"></script>
+		<script type="text/javascript" src="./js/classes/GameObject.js"></script>
 
-		<script type="text/javascript" src="js/classes/Grid.js"></script>
-		<script type="text/javascript" src="js/classes/Group.js"></script>
+		<script type="text/javascript" src="./js/classes/Grid.js"></script>
+		<script type="text/javascript" src="./js/classes/Group.js"></script>
 
-		<script type="text/javascript" src="js/classes/StateManager.js"></script>
+		<script type="text/javascript" src="./js/classes/StateManager.js"></script>
 
 		<!--js/ui/-->
-		<script type="text/javascript" src="js/ui/keys.js"></script>
-		<script type="text/javascript" src="js/ui/mouse.js"></script>
+		<script type="text/javascript" src="./js/ui/keys.js"></script>
+		<script type="text/javascript" src="./js/ui/mouse.js"></script>
 
 		<!--js/utility/-->
-		<script type="text/javascript" src="js/utility/random.js"></script>
+		<script type="text/javascript" src="./js/utility/random.js"></script>
 
 		<!--js/gamestates/-->
-		<script type="text/javascript" src="js/gamestates/menu.js"></script>
-		<script type="text/javascript" src="js/gamestates/level1.js"></script>
+		<script type="text/javascript" src="./js/gamestates/menu.js"></script>
+		<script type="text/javascript" src="./js/gamestates/level1.js"></script>
 
 		<!--js/-->
-		<script type="text/javascript" src="js/game.js"></script>
+		<script type="text/javascript" src="./js/game.js"></script>
 
 </body>
 </html>
