--- a/index.html
+++ b/index.html
@@ -14,38 +14,38 @@
     	Your browser is outdated and does not support HTML5. Please update to the latest version.
     </canvas>
 
-	<!--Audio Files-->
-		<!--sounds/-->
-		<audio src="sounds/splode.mp3" name="splode"></audio>
+<!--Audio Files-->
+        <!--sounds/-->
+        <audio src="./sounds/splode.mp3" name="splode"></audio>
 
-	<!--JavaScript Files-->
+    <!--JavaScript Files-->
 
-		<!--js/data/-->
-		<script type="text/javascript" src="js/data/player.js"></script>
-		<script type="text/javascript" src="js/data/cave.js"></script>
+        <!--js/data/-->
+        <script src="./js/Data/player.js"></script>
+        <script src="./js/Data/cave.js"></script>
 
-		<!--js/classes/-->
-		<script type="text/javascript" src="js/classes/SoundManager.js"></script>
-		<script type="text/javascript" src="js/classes/GameObject.js"></script>
+        <!--js/classes/-->
+        <script src="./js/Classes/SoundManager.js"></script>
+        <script src="./js/Classes/GameObject.js"></script>
 
-		<script type="text/javascript" src="js/classes/Grid.js"></script>
-		<script type="text/javascript" src="js/classes/Group.js"></script>
+        <script src="./js/Classes/Grid.js"></script>
+        <script src="./js/Classes/Group.js"></script>
 
-		<script type="text/javascript" src="js/classes/StateManager.js"></script>
+        <script src="./js/Classes/state.js"></script>
+        <script src="./js/Classes/StateManager.js"></script>
 
-		<!--js/ui/-->
-		<script type="text/javascript" src="js/ui/keys.js"></script>
-		<script type="text/javascript" src="js/ui/mouse.js"></script>
+        <!--js/ui/-->
+        <script src="./js/ui/keys.js"></script>
+        <script src="./js/ui/mouse.js"></script>
 
-		<!--js/utility/-->
-		<script type="text/javascript" src="js/utility/random.js"></script>
+        <!--js/utility/-->
+        <script src="./js/Utility/Random.js"></script>
 
-		<!--js/gamestates/-->
-		<script type="text/javascript" src="js/gamestates/menu.js"></script>
-		<script type="text/javascript" src="js/gamestates/level1.js"></script>
+        <!--js/gamestates/-->
+        <script src="./js/GameStates/menu.js"></script>
+        <script src="./js/GameStates/level1.js"></script>
 
-		<!--js/-->
-		<script type="text/javascript" src="js/game.js"></script>
-
+        <!--js/-->
+        <script src="./js/game.js"></script>
 </body>
 </html>
